plugins {
    id 'java'
}

allprojects {
    group = 'Semchishin'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Test) {
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
        }
    }
}
